--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,700" rel="stylesheet">
 </head>
 
 <body>
