add linkedin api config

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  
+  <script type="text/javascript" src="https://platform.linkedin.com/in.js">
+    api_key: {LINKEDIN_API}
+    authorize: true
+    scope: r_basicprofile r_emailaddress
+  </script>
+
 </body>
 
 </html>
