--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,24 @@
     authorize: true
     scope: r_basicprofile r_emailaddress
   </script>
+ <script>
+  window.fbAsyncInit = function () {
+    FB.init({
+      appId: {FACEBOOK_API_ID},
+      autoLogAppEvents: true,
+      xfbml: true,
+      version: 'v3.0',
+    });
+  };
 
+  (function (d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) { return; }
+    js = d.createElement(s); js.id = id;
+    js.src = "https://connect.facebook.net/en_US/sdk.js";
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));
+</script>
 </body>
 
 </html>
